--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        /* Estilo para centrar el contenido en la pantalla */
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000000;
+        }
+
+        .card {
+            width: 100%;
+            max-width: 18rem;
+            border-radius: 15px;
+            overflow: hidden;
+        }
+
+        .card-img-top {
+            width: 100%;
+            height: auto;
+            object-fit: cover; /* Mantiene la proporción de la imagen */
+        }
+
+        /* Asegura que los botones se vean bien en el móvil */
+        .card-body {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1><%= titulo_1 %></h1>
-    <img src="../../../imagenes/Mi_perro_el_Maldito.jpg" alt="">
+    <div class="card">
+        <img src="../../../imagenes/Mi_perro_el_Maldito.jpg" class="card-img-top" alt="Imagen del perro">
+        <div class="card-body">
+            <h5 class="card-title"><%= titulo_1 %></h5>
+            <p class="card-text">Prueben los botones</p>
+            <a href="/login" class="btn btn-primary">Login</a>
+            <a href="/registro_usuario" class="btn btn-primary">Registro</a>
+        </div>
+    </div>
 </body>
 </html>
