--- a/src/interfaces/views/error404.ejs
+++ b/src/interfaces/views/error404.ejs
@@ -16,7 +16,7 @@
             <h2 class="display-6 error-message mb-3">Page Not Found</h2>
             <p class="lead error-message mb-5">We can't seem to find the page you're looking for.</p>
             <div class="d-flex justify-content-center gap-3">
-                <a href="#" class="btn btn-glass px-4 py-2">Return Home</a>
+                <a href="/" class="btn btn-glass px-4 py-2">Return Home</a>
                 <a href="#" class="btn btn-glass px-4 py-2">Report Problem</a>
             </div>
         </div>
