--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -26,11 +26,14 @@
 
   <!-- Main CSS File -->
   <link href="../../../css/main.css" rel="stylesheet">
+  <link href="../../../css/chat.css" rel="stylesheet">
 
 
 </head>
 
 <body class="index-page">
+
+
 
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
@@ -61,7 +64,28 @@
   </header>
 
   <main class="main">
+<!-- chatbot -->
+    <div id="chat-container">
+      <button id="chat-button">
+          💬
 
+      </button>
+      <div id="chat-box">
+          <div id="chat-header">
+              <span>🤖 Bienvenido al Chatbot </span>
+              <button id="close-chat">✖</button>
+          </div>
+          <div id="chat-messages">
+              <p class="bot-message">🤖 ¡Hola! ¿En qué puedo ayudarte?</p>
+          </div>
+          <div id="chat-footer">
+              <input type="text" id="chat-input" placeholder="Escribe un mensaje...">
+              <button id="send-button">➤</button>
+          </div>
+      </div>
+  </div>
+  
+  
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
@@ -79,32 +103,32 @@
         <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <i class="bi bi-binoculars"></i>
-              <h3><a href="">Lorem Ipsum</a></h3>
+              <i class="bi bi-credit-card"></i>
+              <h3><a href="">Tarjeta de crédito</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="icon-box">
-              <i class="bi bi-bullseye"></i>
-              <h3><a href="">Dolor Sitema</a></h3>
+              <i class="bi bi-shield-lock"></i>
+              <h3><a href="">Seguridad financiera</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
-              <i class="bi bi-fullscreen-exit"></i>
-              <h3><a href="">Sedare Perspiciatis</a></h3>
+              <i class="bi bi-arrow-left-right"></i>
+              <h3><a href="">Transacción</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="600">
             <div class="icon-box">
-              <i class="bi bi-card-list"></i>
-              <h3><a href="">Magni Dolores</a></h3>
+              <i class="bi bi-briefcase"></i>
+              <h3><a href="">Negocios</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="700">
             <div class="icon-box">
-              <i class="bi bi-gem"></i>
-              <h3><a href="">Nemos Enimade</a></h3>
+              <i class="bi bi-graph-up"></i>
+              <h3><a href=""> Crecimiento económico</a></h3>
             </div>
           </div>
         </div>
@@ -928,6 +952,7 @@
 
   <!-- Main JS File -->
   <script src="../../../js/main.js"></script>
+  <script src="../../../js/chat.js"></script>
 
 </body>
 
