--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="../../../img/favicon.png" rel="icon">
+  <link href="../../../img/Logo_Cuadro.png" rel="icon">
   <link href="../../../img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -50,7 +50,7 @@
           <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="#about">Acerca de Nosotros</a></li>
           <li><a href="#services">Servicios</a></li>
-          <li><a href="#portfolio">GAlleria</a></li>
+          <li><a href="#portfolio">Galleria</a></li>
           <li><a href="#team">Grupo de trabajo</a></li>
           
           <li><a href="#contact">Contacto</a></li>
@@ -865,8 +865,8 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
-            <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">GP</span>
+            <a href="/" class="logo d-flex align-items-center">
+              <img src="../../../img/logo_raiz_financiera.png" alt="" style="max-height: 120px;">
             </a>
             <div class="footer-contact pt-3">
               <p>A108 Adam Street</p>
