--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -285,7 +285,7 @@
               <div class="icon">
                 <i class="bi bi-activity"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="https://www.bci.cl/beneficios/beneficios-bci" class="stretched-link">
                 <h3>Beneficios</h3>
               </a>
               <p>Descubre los mejores beneficios de marzo</p>
@@ -298,7 +298,7 @@
               <div class="icon">
                 <i class="bi bi-broadcast"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="https://www.bci.cl/personas/abrir-cuenta-corriente" class="stretched-link">
                 <h3>Cuenta Raíz</h3>
               </a>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
@@ -310,7 +310,7 @@
               <div class="icon">
                 <i class="bi bi-easel"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="https://www.bci.cl/corredora-de-seguros/seguros/seguro-automotriz" class="stretched-link">
                 <h3>Seguros</h3>
               </a>
               <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
@@ -322,7 +322,7 @@
               <div class="icon">
                 <i class="bi bi-bounding-box-circles"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="https://www.bci.cl/personas/credito-hipotecario/simulador" class="stretched-link">
                 <h3>Hipotecario</h3>
               </a>
               <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
@@ -335,7 +335,7 @@
               <div class="icon">
                 <i class="bi bi-calendar4-week"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="https://www.bci.cl/personas/creditos-de-consumo?=simular" class="stretched-link">
                 <h3>Credito de Consumo</h3>
               </a>
               <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
