--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,7 +48,7 @@
   --background-color: #060606;
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --surface-color: #252525;
+  --surface-color: #25252596;
   --contrast-color: #2a2727;
 }
 
@@ -860,6 +860,7 @@ section,
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-radius: 150px;
 }
 
 .hero .icon-box i {
@@ -1014,6 +1015,7 @@ section,
   padding: 80px 20px;
   height: 100%;
   transition: all ease-in-out 0.3s;
+  border-radius: 15px; /* Agrega esquinas redondeadas */
 }
 
 .services .service-item .icon {
