borrado de imagenes

--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -96,7 +96,7 @@
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
             <h2><%= titulo_1 %><span>.</span></h2>
-            <p>Seguridad, crecimiento y confianza en cada inversión.</p>
+            <p><%= subtitulo %></p>
           </div>
         </div>
 
@@ -202,10 +202,10 @@
             <img src="../../../img/logo_raiz_financiera.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 order-2 order-lg-1 content">
-            <h3>Nuestra Historia</h3>
+            <h3><%= titulo_NH %></h3>
             
             <ul>
-              <li><i class="bi bi-check2-all"></i> <span>En Raíz Finanziera, creemos que el éxito financiero se construye sobre bases sólidas de confianza, estrategia y compromiso. Desde nuestra fundación en 2025, hemos trabajado incansablemente para ofrecer soluciones financieras innovadoras, adaptadas a las necesidades de nuestros clientes.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span><%= texto_NH1 %></span></li>
               <li><i class="bi bi-check2-all"></i> <span>Lo que comenzó como un pequeño equipo apasionado por las finanzas, hoy se ha convertido en una firma reconocida por su transparencia, profesionalismo y enfoque en el crecimiento sostenible. A lo largo de los años, hemos acompañado a empresas y personas en la toma de decisiones financieras inteligentes, ayudándoles a alcanzar sus metas con seguridad y eficiencia.</span></li>
               <li><i class="bi bi-check2-all"></i> <span>Nuestro compromiso es seguir brindando asesoría financiera de primer nivel, combinando experiencia y tecnología para impulsar el futuro económico de quienes confían en nosotros.</span></li>
             </ul>
