--- a/src/interfaces/views/login.ejs
+++ b/src/interfaces/views/login.ejs
@@ -31,18 +31,19 @@
                                     <h6 class="h5 mb-0">Bienvenido a ChatBot U Mayor!</h6>
                                     <p class="text-muted mt-2 mb-5">Introduzca su dirección de correo electrónico y contraseña para acceder al panel de administración.</p>
     
-                                    <form>
+                                    <form action="/login" method="POST">
                                         <div class="form-group">
-                                            <label for="exampleInputEmail1">Email </label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1">
+                                            <label for="exampleInputEmail1">Email</label>
+                                            <input type="email" class="form-control" id="exampleInputEmail1" name="email" required>
                                         </div>
                                         <div class="form-group mb-5">
                                             <label for="exampleInputPassword1">Password</label>
-                                            <input type="password" class="form-control" id="exampleInputPassword1">
+                                            <input type="password" class="form-control" id="exampleInputPassword1" name="password" required>
                                         </div>
-                                        <button type="submit" class=" btn-theme">Login</button>
+                                        <button type="submit" class="btn-theme">Login</button>
                                         <br><a href="#l" class="forgot-link float-right text-primary">Has olvidado tu contraseña?</a>
                                     </form>
+                                    
                                 </div>
                             </div>
     
