--- a/src/interfaces/views/login.ejs
+++ b/src/interfaces/views/login.ejs
@@ -16,8 +16,8 @@
 <body>
     <section>
 
-    <div id="main-wrapper" class="container">
-        <div class="row justify-content-center">
+    <div id="main-wrapper" class="container form-control">
+        <div class="row justify-content-center ">
             <div class="col-xl-10">
                 <div class="card border-2">
                     <div class="card-body p-0">
@@ -31,7 +31,7 @@
                                     <h6 class="h5 mb-0">Bienvenido a ChatBot U Mayor!</h6>
                                     <p class="text-muted mt-2 mb-5">Introduzca su dirección de correo electrónico y contraseña para acceder al panel de administración.</p>
     
-                                    <form action="/login" method="POST">
+                                    <form action="/login" method="POST" >
                                         <div class="form-group">
                                             <label for="exampleInputEmail1">Email</label>
                                             <input type="email" class="form-control" id="exampleInputEmail1" name="email" required>
