conexion del CHAT

--- a/src/interfaces/views/registro.ejs
+++ b/src/interfaces/views/registro.ejs
@@ -16,6 +16,13 @@
         <div id="main-wrapper" class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-10">
+
+                    <% if (typeof error !== "undefined") { %>
+                        <div class="alert alert-danger" role="alert">
+                            <%= error %>
+                        </div>
+                    <% } %>
+
                     <div class="card border-2">
                         <div class="card-body p-0">
                             <div class="row no-gutters">
