--- a/src/interfaces/views/login.ejs
+++ b/src/interfaces/views/login.ejs
@@ -19,6 +19,14 @@
     <div id="main-wrapper" class="container form-control">
         <div class="row justify-content-center ">
             <div class="col-xl-10">
+
+                <% if (typeof error !== "undefined") { %>
+                    <div class="alert alert-danger" role="alert">
+                        <%= error %>
+                    </div>
+                <% } %>
+                
+
                 <div class="card border-2">
                     <div class="card-body p-0">
                         <div class="row no-gutters">
