--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -30,7 +30,6 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="css/responsive.css" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/custom.css" />
 
     <link rel="stylesheet" href="css/chat.css" />
 
@@ -53,7 +52,7 @@
             <div class="container">
                 <div class="row">
                     <div class="logo_section">
-                        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="image"></a>
+                        <a class="navbar-brand" href="/"><img src="images/logo.png" alt="image"></a>
                     </div>
                     <div class="site_information">
                         <ul>
