--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3145,3 +3145,53 @@ html {
 .boton_volver:hover {
 	background-color: #d4a703;
 }
+
+
+
+
+/*login*/
+
+/* Agregar este estilo a tu archivo style.css */
+/* Estilo de alerta adaptable y elegante */
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: all 0.3s ease-in-out;
+}
+
+.alert-danger {
+    background-color: rgba(255, 0, 38, 0.603);
+    color: #b71c1c;
+    border-left: 5px solid #b71c1c;
+}
+
+.alert-danger P{
+	color: #ffffff;
+}
+
+.alert-danger P:hover{
+	color: #000000;
+}
+
+.alert-danger:hover {
+    background-color: #ffdde1;
+	
+}
+
+.alert-icon {
+    font-size: 20px;
+}
+
+@media (max-width: 600px) {
+    .alert {
+        font-size: 14px;
+        padding: 10px;
+    }
+}
