--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -12,7 +12,7 @@
         <%= title %>
     </title>
     <!-- Site Metas -->
-    <title>Raíz Financiera - Responsive HTML5 Template</title>
+    <title>Raíz Financiera</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
